Fixed header spacing

--- a/wp-content/themes/tucsoncoldwetnoses/style.css
+++ b/wp-content/themes/tucsoncoldwetnoses/style.css
@@ -4,7 +4,7 @@ Theme URI: https://github.com/AlishaEscoto/TucsonColdWetNoses
 Author: Alisha Escoto
 Author URI: https://www.alishaescoto.com
 Description: Theme built for Tucson Cold Wet Noses animal rescue
-Version: 0.2.7
+Version: 0.2.8
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: tucsoncoldwetnoses
@@ -864,7 +864,7 @@ a:active {
 
 .main-navigation a[href^="https://www.facebook.com/"] {
 	left: -14em;
-	color: #08B5D6;
+	color: #4267b2;
 	background: transparent;
 }
 
@@ -878,6 +878,16 @@ a:active {
 	}
 	.main-navigation ul {
 		display: block;
+	}
+
+	.main-navigation {
+		font-size: .8em;
+	}
+}
+
+@media screen and (min-width: 52em) {
+	.main-navigation {
+		font-size: 1em;
 	}
 }
 
@@ -1177,7 +1187,6 @@ data-sr { visibility: hidden; }
 	.custom-logo-link img {
 		max-width: 400px;
 	}
-
 }
 
 .site-description {
